file refactoring and swagger api docs update
